sumo/tests/duarouter/alternatives/style2_input/errors/route/route_cost_negative/errors.duarouter
Error: Invalid cost in alternative for route '!1' (-125.13).
Quitting (on error).
